--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "socketio-sample",
+  "name": "realtime-chat-sample",
   "version": "0.0.0",
   "private": true,
   "scripts": {
+		"start": "node_modules/.bin/supervisor -e js app.js",
     "start": "node ./bin/www",
-		"start": "node_modules/.bin/supervisor -e js app.js"
+    "start": "node app.js"
   },
   "dependencies": {
     "body-parser": "~1.10.2",
