--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "start": "node ./bin/www",
     "start": "node app.js"
   },
+  "engine": {
+    "node": "v0.10.36",
+    "npm": "1.4.28"
+  },
   "dependencies": {
     "body-parser": "~1.10.2",
     "cookie-parser": "~1.3.3",
