rm npm pakage.json

--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "engines": {
-    "node": "0.10.36",
-    "npm": "1.4.28"
+    "node": "0.10.36"
   },
   "dependencies": {
     "body-parser": "~1.10.2",
