--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "engines": {
     "node": "0.10.36"
   },
+	"scripts": {
+		"start": "supervisor -e js app.js"
+	},
   "dependencies": {
     "body-parser": "~1.10.2",
     "cookie-parser": "~1.3.3",
